edu服务模块-各模块继承关系

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -9,7 +9,8 @@
     </parent>
 
     <modules>
-        <module>common.util</module>
+        <module>common-util</module>
+        <module>service-base</module>
     </modules>
 
     <modelVersion>4.0.0</modelVersion>
