--- a/service/service-edu/src/main/resources/application.yml
+++ b/service/service-edu/src/main/resources/application.yml
@@ -10,6 +10,9 @@ spring:
     password: 123123
   application:
     name: guli-edu
+  jackson:
+   time-zone: GMT+8
+   date-format: yyyy-MM-dd HH:mm:SS
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
