引入分布式框架（nacos-openfeign） edu远程调用oss

--- a/service/service-edu/src/main/resources/application.yml
+++ b/service/service-edu/src/main/resources/application.yml
@@ -11,8 +11,20 @@ spring:
   application:
     name: guli-edu
   jackson:
-   time-zone: GMT+8
-   date-format: yyyy-MM-dd HH:mm:SS
+    time-zone: GMT+8
+    date-format: yyyy-MM-dd HH:mm:SS
+  cloud:
+    nacos:
+      discovery:
+        server-addr: http://localhost:8848
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+logging:
+  level:
+    com.atguigu.guli.service.edu.feign.OssFileService: debug #以什么级别监控哪个接口
+ribbon:
+  ConnectTimeout: 5000 #连接建立的超时时长，默认1秒
+  ReadTimeout: 5000 #处理请求的超时时间，默认为1秒
+  MaxAutoRetries: 0 # 同一实例最大重试次数，不包括首次调用，默认0
+  MaxAutoRetriesNextServer: 1
