--- a/service/service-oss/src/main/resources/application.yml
+++ b/service/service-oss/src/main/resources/application.yml
@@ -6,6 +6,10 @@ spring:
     multipart:
       max-request-size: 500MB # 允许一次请求所有的表单项上传文件的总大小
       max-file-size: 200MB  # 允许一次请求单个表单项上传的文件大小
+  cloud:
+    nacos:
+      discovery:
+        server-addr: http://localhost:8848
 server:
   port: 8220
 
